<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="wrap_content"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp"
    android:fillViewport="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <ImageButton
            android:id="@+id/btnburger"
            android:layout_width="283dp"
            android:layout_height="201dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="574dp"
            app:layout_constraintBottom_toTopOf="@+id/ice"
            app:layout_constraintEnd_toEndOf="@+id/burger"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/btnsteak"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.39"
            app:srcCompat="@drawable/burger" />

        <ImageButton
            android:id="@+id/btnsteak"
            android:layout_width="0dp"
            android:layout_height="180dp"

            android:layout_marginTop="229dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="230dp"
            app:layout_constraintBottom_toTopOf="@+id/btnice"
            app:layout_constraintEnd_toEndOf="@+id/btnsalad"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/steak"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.047"
            app:srcCompat="@drawable/steaks" />

        <ImageButton
            android:id="@+id/btnsalad"
            android:layout_width="289dp"
            android:layout_height="167dp"
            android:layout_marginTop="29dp"
            android:layout_marginEnd="79dp"
            android:layout_marginBottom="31dp"
            app:layout_constraintBottom_toTopOf="@+id/btnice"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/salad"
            app:layout_constraintTop_toBottomOf="@+id/steak"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/salad" />

        <ImageButton
            android:id="@+id/btnice"
            android:layout_width="283dp"
            android:layout_height="187dp"
            android:layout_marginEnd="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/steak"
            app:layout_constraintHorizontal_bias="0.555"
            app:layout_constraintStart_toStartOf="@+id/ice"
            app:layout_constraintTop_toBottomOf="@+id/salad"
            app:srcCompat="@drawable/ice" />

        <TextView
            android:id="@+id/burger"
            android:layout_width="286dp"
            android:layout_height="38dp"
            android:layout_marginTop="181dp"

            android:layout_marginBottom="155dp"
            android:background="#EE292B2B"
            android:text="@string/burger"
            android:textColor="@color/white"
            android:textSize="27sp"
            app:layout_constraintBottom_toTopOf="@+id/steak"
            app:layout_constraintEnd_toEndOf="@+id/btnsteak"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/steak"
            android:layout_width="283dp"
            android:layout_height="38dp"
            android:layout_marginStart="28dp"
            android:layout_marginBottom="162dp"
            android:width="280dp"
            android:background="#EE292B2B"

            android:text="@string/steak"
            android:textColor="@color/white"
            android:textSize="27sp"
            app:layout_constraintBottom_toTopOf="@+id/salad"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/burger" />

        <TextView
            android:id="@+id/salad"
            android:layout_width="291dp"
            android:layout_height="34dp"
            android:layout_marginStart="28dp"
            android:layout_marginBottom="32dp"
            android:background="#EE292B2B"
            android:text="@string/salad"
            android:textColor="@color/white"
            android:textSize="27sp"
            app:layout_constraintBottom_toTopOf="@+id/btnice"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/steak" />

        <TextView
            android:id="@+id/ice"
            android:layout_width="297dp"
            android:layout_height="38dp"
            android:layout_marginStart="28dp"
            android:width="300sp"
            android:background="#EE292B2B"

            android:text="@string/ice"
            android:textColor="@color/white"
            android:textSize="27sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnburger" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

    <!--    match_parent-->